[package]
name = "sky-shader"
version = "0.1.0"
authors = ["Embark <opensource@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std-macros = { path = "./rust-gpu/crates/spirv-std-macros" }
spirv-std = { path = "./rust-gpu/crates/spirv-std" }
shared = { path = "./rust-gpu/examples/shaders/shared" }